--- a/public/frontend/css/account.css
+++ b/public/frontend/css/account.css
@@ -1,8 +1,9 @@
 
+
 .ctn-rating-product {
     max-width: 1600px;
-    margin: 0 auto;
     padding: 20px;
+    margin: 0 auto;
 }
 
 .header {
@@ -42,10 +43,10 @@
     border-bottom: 2px solid black;
 }
 
-
 .account-container {
     font-family: Arial, sans-serif;
     line-height: 1.6;
+    background-color: #f9f9f9;
     color: #333;
     padding: 20px;
 }
