--- a/public/frontend/css/rating-product.css
+++ b/public/frontend/css/rating-product.css
@@ -1,13 +1,14 @@
 .container-rating-product {
     line-height: 1.6;
+    background-color: #f9f9f9;
     color: #333;
 }
 
-
 .ctn-rating-product {
     max-width: 1600px;
-    margin: 0 auto;
     padding: 20px;
+    margin: 0 auto;
+    text-align: center;
 }
 
 .header {
@@ -19,9 +20,6 @@
 
 .header h1 {
     color: white;
-}
-.ctn-rating-product p{
-    text-align: center;
 }
 
 .navigation ul {
@@ -46,29 +44,28 @@
     color: black;
     border-bottom: 2px solid black;
 }
-
-
-
-
 .ctn-body-rating-product {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 90vw; 
-    margin: 0 auto;
     align-items: center;
-    padding-right: 70px;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
 }
 .product-item {
     display: flex;
     align-items: center;
     gap: 20px;
+    background-color: #fff;
+    padding: 15px;
     border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .product-image {
-    width: 130px;
-    height: 130px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     border-radius: 10px;
     margin-left: 70px;
@@ -94,7 +91,7 @@
 }
 
 .description {
-    height: 100px;
+    height: 300px;
     background-color: #dcdcdc;
     border-radius: 5px;
     margin-bottom: 50px;
