--- a/public/frontend/css/popup.css
+++ b/public/frontend/css/popup.css
@@ -52,12 +52,7 @@
 }
 
 .popup .register {
-    overflow: hidden; /* Đảm bảo không tràn nội dung */
-    transition: all 0.3s ease; 
-    position: relative;
-    min-height: 200px; 
-    max-height: 90vh;
-    overflow-y: auto; /* Thêm cuộn dọc nếu vượt chiều cao */
+    height: 370px;
 }
 
 .popup-content {
