--- a/public/frontend/css/search.css
+++ b/public/frontend/css/search.css
@@ -9,11 +9,13 @@ h1{
     justify-content: center;
     align-items: center;
     margin-top: 60px;
-    gap: 10px
+    gap: 10px;
+    width: 100%;
+    max-width: 500px;
 }
 
 .search-bar input {
-    width: 40%;
+    width: 100%;
     margin-bottom: 0%;
     border: 2px solid #ccc;
     border-radius: 25px;
