--- a/public/frontend/css/search.css
+++ b/public/frontend/css/search.css
@@ -11,6 +11,7 @@ h1{
     margin-top: 60px;
     gap: 10px;
     width: 100%;
+    height: 121px;
     max-width: 500px;
 }
 
@@ -24,4 +25,10 @@ h1{
 .search-bar button {
     width: 100px;
     flex: none;
+}
+
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(250px, 1fr)) !important;
+    gap: 20px;
 }
