--- a/public/frontend/css/slideshow.css
+++ b/public/frontend/css/slideshow.css
@@ -99,7 +99,7 @@
   justify-content: center;
   align-items: center;
   transition: all 0.3s ease;
-  margin-left: 150px;
+  margin-left: 36%;
 }
 
 .slideshow-button:hover {
