--- a/public/frontend/css/home.css
+++ b/public/frontend/css/home.css
@@ -259,7 +259,7 @@ hr {
     margin-bottom: 50px;
     overflow: hidden;
     background-color: #ffffff;
-    height: auto;
+    height: 450px;
 }
 
 .single-product-wrapper .product-img {
