--- a/public/frontend/css/home.css
+++ b/public/frontend/css/home.css
@@ -294,7 +294,7 @@ hr {
     visibility: hidden;
 }
 
-.single-product-wrapper .product-img .product-badge {
+.product-badge {
     height: 25px;
     background-color: #000000;
     color: #ffffff;
@@ -314,7 +314,7 @@ hr {
     background-color: #dc0345;
 }
 
-.single-product-wrapper .product-img .product-badge.new-badge {
+ .product-badge.new-badge {
     background-color: #0315ff;
 }
 
@@ -374,7 +374,7 @@ hr {
 
 .pre-oder-new-arrivals span {
     color: white !important;
-    margin-left: 10px;
+    margin-left: 7px;
 }
 
 .single-product-wrapper .product-description h6 {
