--- a/public/frontend/css/home.css
+++ b/public/frontend/css/home.css
@@ -1,4 +1,3 @@
-
 /* Section Titles */
 h2 {
     font-size: 2.5rem;
@@ -314,7 +313,7 @@ hr {
     background-color: #dc0345;
 }
 
- .product-badge.new-badge {
+.product-badge.new-badge {
     background-color: #0315ff;
 }
 
@@ -344,6 +343,7 @@ hr {
     position: relative;
     z-index: 1;
     padding-top: 25px;
+    text-align: center;
 }
 
 .single-product-wrapper .product-description span {
@@ -362,7 +362,6 @@ hr {
 .pre-oder-new-arrivals {
     font-size: 10px;
     text-transform: uppercase;
-    margin-bottom: 15px;
     letter-spacing: 0.75px;
     font-weight: 600;
     background-color: red;
@@ -370,16 +369,22 @@ hr {
     height: 15px;
     border-radius: 10px;
     border: 1px solid red;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
-
-.pre-oder-new-arrivals span {
-    color: white !important;
+.pre-order span {
     margin-left: 7px;
 }
+.pre-oder-new-arrivals span {
+    color: white !important;
+    text-align: center;
+}
 
-.single-product-wrapper .product-description h6 {
+.product-description h6 {
     color: #222222;
     margin-bottom: 5px;
+    text-align: center;
 }
 
 .single-product-wrapper .product-description p {
@@ -575,7 +580,8 @@ hr {
         margin-right: 20px;
     }
 
-    .prod-2, .prod-3 {
+    .prod-2,
+    .prod-3 {
         width: 300px;
         height: 100px;
         margin-top: 180px;
