--- a/public/frontend/css/wishlist.css
+++ b/public/frontend/css/wishlist.css
@@ -107,6 +107,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
+    margin-top:120px
 }
 
 /* Product card styles */
