thêm link trang chi tiết sp ở wishlist và thêm function add to cart ở trang chi tiết
ok

--- a/public/frontend/css/single-product-details.css
+++ b/public/frontend/css/single-product-details.css
@@ -592,4 +592,10 @@ textarea:hover,
     text-align: center;
 }
 
+.product-favourite .add {
+    width: 0 !important;
+    margin: 0 !important;
+    white-space: nowrap;
+    font-size: 13px;
+}
 
