--- a/public/frontend/css/single-product-details.css
+++ b/public/frontend/css/single-product-details.css
@@ -142,7 +142,7 @@
     color: red;
 }
 .container-detail {
-    max-width: 1200px;
+    max-width: 1500px;
     margin: 0 auto;
     padding: 20px;
 }
@@ -215,7 +215,9 @@
     margin: 20px auto;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 800px;
-    height: 200px;
+    min-height: 200px;
+    max-height: 400px;
+    height: fit-content;
 }
 .review-section-comment {
     font-family: "Arial", sans-serif;
@@ -225,7 +227,7 @@
     padding: 20px;
     margin: 20px auto;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 70vw;
+    width: 80vw;
     height: auto;
 }
 
@@ -546,6 +548,7 @@ textarea:hover,
 }
 .ctn-rating {
     display: flex;
+    column-gap: 100px;
 }
 .product-card {
     background-color: #fff;
@@ -614,7 +617,7 @@ textarea:hover,
 }
 .normal {
     position: relative;
-    right: 120px;
+    right: 250px;
     bottom: 5px;
     background-color: #555;
     border: #555;
@@ -630,14 +633,6 @@ input[type="number"]::-webkit-outer-spin-button {
     margin: 0;
 }
 
-
-.product-favourite .add {
-    width: 0 !important;
-    margin: 0 !important;
-    white-space: nowrap;
-    font-size: 13px;
-}
-  
 input[type="number"] {
     -moz-appearance: textfield;
 }
